--- a/backend/package.json
+++ b/backend/package.json
@@ -7,19 +7,23 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["chatbot", "mental-health", "wellness"],
+  "keywords": [
+    "chatbot",
+    "mental-health",
+    "wellness"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "mongoose": "^7.0.0",
-    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "axios": "^1.3.4"
+    "mongoose": "^7.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.1.11"
   }
 }
