--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,11 @@
   "description": "Frontend for Mental Health Chatbot",
   "private": true,
   "dependencies": {
+    "axios": "^1.3.4",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "axios": "^1.3.4",
-    "lucide-react": "^0.263.1"
+    "react-router-dom": "^6.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,6 +34,6 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "react-scripts": "^0.0.0"
   }
 }
